# StatsPlayground

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
docs/: development.md  scaffold.md  spec.md
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: data_commands.rs  history_commands.rs  io_commands.rs  mod.rs  project_commands.rs  stats_commands.rs  table_commands.rs
src-tauri/src/engine/: duckdb_engine.rs  mod.rs
src-tauri/src/models/: mod.rs  project.rs  stats.rs  table.rs
src-tauri/src/services/: data_service.rs  io_service.rs  mod.rs  project_service.rs  stats_service.rs
src/components/: DataTableView.tsx  HistoryPanel.tsx  NewTableDialog.tsx  PreferencesDialog.tsx  TableOpsDialog.tsx  WelcomePage.tsx  Workspace.tsx
src/services/: dataService.ts  historyService.ts  index.ts  ioService.ts  projectService.ts  statsService.ts
src/stores/: index.ts  useDataStore.ts  useHistoryStore.ts  useProjectStore.ts  useThemeStore.ts
src/types/: data.ts  history.ts  index.ts  project.ts  stats.ts
src/utils/: ctxMenu.ts  platform.ts
