[package]
name = "stats-playground"
version = "0.1.0"
description = "An ultra-lightweight, open-source, and extensible data analysis tool"
authors = ["StatsPlayground Contributors"]
edition = "2021"

[lib]
name = "stats_playground_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
duckdb = { version = "1", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
